@@ -1,5 +1,6 @@
 1.5.14 changes
 --------------
+- set preferred driver for DYMO LabelWriter 400
 
 1.5.13 changes
 --------------
